style: prevent content shift on image load

--- a/src/containers/DeveloperPortal/containers/SdkAndLibraries/components/ConfirmationModal/ConfirmationModal.scss
+++ b/src/containers/DeveloperPortal/containers/SdkAndLibraries/components/ConfirmationModal/ConfirmationModal.scss
@@ -32,6 +32,7 @@
 
   &__image {
     margin-bottom: 40px;
+    min-height: 72px;
 
     @media (max-width: 768px) {
       margin-bottom: 24px;
